--- a/web/styles.css
+++ b/web/styles.css
@@ -1,14 +1,18 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto);
-
-html, body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto', sans-serif;
+body {
+  background-color: #F8F8F8;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.2em;
+  margin: 15px;
 }
 
-#output {
-  padding: 20px;
-  text-align: center;
+.name {
+  width: 144px;
+  height: 48px;
+  font-size: 32px;
+  background-color: Lavender;
+  color: purple;
+  border: 1px solid black;
+  margin: 2px 2px 2px 2px;
 }
